Search picker label overlap-fix

--- a/blocks/header/exl-header.css
+++ b/blocks/header/exl-header.css
@@ -344,8 +344,9 @@
 }
 
 .search-picker-label {
-  min-width: max-content;
   display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .search-picker-label span.icon img {
